syntax = "proto3";
package HelloWorld;
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service HelloWorld {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string age = 100;
  string zouhaiping = 200;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
